package gameLaby.laby;

/**
 * gere un héros situe en x,y
 */
public class Heros extends Perso{

    /**
     * constructeur
     *
     * @param x position selon x
     * @param y position selon y
     */
    public Heros(int x, int y){
        super(x, y);
    }
}
