package gameLaby.laby;

/**
 * gere un monstre situe en x,y
 */
public class Monstre extends Perso{

    /**
     * constructeur
     *
     * @param x position selon x
     * @param y position selon y
     */
    public Monstre(int x, int y){
        super(x, y);
    }
}
