@startuml

package javafx.application{
class Application{
}
}


package moteurJeu{

class MoteurJeu{
- <static> width: double
- <static> height: double
- <static> FPS: int
+ <static> launch(jeu: Jeu, dessin: DessinJeu)
+ <static> setTaille(width: double, height: double)
+ <static> setFPS(FPS: int)
+ start(primaryStage: Stage)
+ startAnimation(canvas: Canvas)
}

Application <|-- MoteurJeu



interface Jeu{
+ init()
+ update(secondes: double, clavier: Clavier)
+ etreFini(): boolean
}

MoteurJeu "1" --> "1" Jeu : - <static> jeu


interface DessinJeu{
+ dessinerJeu(jeu: Jeu, canvas: Canvas)
}

MoteurJeu "1" --> "1" DessinJeu : - <static> dessin

class Clavier{
- haut: boolean
- bas: boolean
- gauche: boolean
- droite: boolean
+ appuyerTouche(event : KeyEvent)
+ relacherTouche(event : KeyEvent)
}

MoteurJeu "1" --> "1" Clavier : - clavier
}

package gameLaby{

class LabyJeu{
- laby : Labyrinthe
+ labyJeu()
+ update(secondes : double, clavier : Clavier)
+ init() : boolean
+ getLaby() : Labyrinthe
}
Jeu <|.. LabyJeu

class LabyDessin{
+ dessinerJeu(jeu : Jeu, canvas : Canvas)



}

class Labyrinthe{
    + {static} MUR : char
    + {static} PJ : char
    + {static} MONSTRE : char
    + {static} VIDE : char
    + {static} HAUT : String
    + {static} BAS : String
    + {static} GAUCHE : String
    + {static} DROITE : String
    + murs : boolean

    + Labyrinthe(String)
    + {static} getSuivant(int, int, String) : int[]
    + deplacerPerso(String)
    + deplacerMonstre(String)
    + etreFini() : boolean
    + getLengthY() : int
    + getLength() : int
    + getMur(int, int) : boolean
}

class Perso{
    + x : int
    + y : int
    + Perso(int, int)
    + etrePresent(int, int) : boolean
    + getX() : int
    + getY() : int
}

class Monstre{
    + Monstre(int, int)
}

class Heros{
    + Heros(int, int)
}
Labyrinthe "1" -> "1" Heros: + heros
Labyrinthe "1" -> "1" Monstre : + monstre
LabyJeu "1" -> "1" Labyrinthe : + laby

Perso <|-- Monstre
Perso <|-- Heros
DessinJeu <|.. LabyDessin



}


@enduml